--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -28,7 +28,8 @@
                 <p class="text">De pequeño siempre me atrajeron las computadoras y gracias a eso tuve claro que quería estudiar. Tuve la suerte de poder entrar en la secundaria que quería, la cual tenia especializaciones técnicas. Principalmente había ido por la especialidad de Computación en la cual aprendí sobre la programación, redes informáticas, organización de procesos, etc. Esto me abrió el panorama del mundo de la informática  la cual me permitió decidir a que me quería dedicar en el futuro.</p>
                 <h3 class="titulo-text">¿Que estoy haciendo actualmente?</h3>
                 <p class="text">Actualmente no estoy buscando trabajo de manera activa. Uso el tiempo para seguir avanzando con la universidad  ,mejorar como programador con pequeños proyectos y mejorar mis idiomas, actualmente hablo Español e Ingles de manera fluida y estoy en proceso de aprender Portugués.</p>
-            </article>
+                <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6795705252638187520" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+              </article>
     </main>
     <footer>
         <b>"Desarrollado por Juan Herrera"</b>        
