--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-</head>
+    <link rel="icon" href="img/favicon.ico">
+  </head>
 <body id="body-index">
     <nav class="nav-pc" id="navi">
         <a href="index.html" class="active">Inicio</a>
         <a href="html/proyectos.html" class="resto ">Proyectos</a>
-        <a href="html/acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="html/blog.html" class="resto" >Blog</a>
+        <a href="html/acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="html/contacto.html" class="resto" >Contacto</a>
         
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
